<resources>
    <string name="app_name">QRLO</string>


    <string name="welcome">WELCOME</string>
    <string name="facebook_app_id">3375893455807907</string>
    <string name="fb_login_protocol_scheme">fb3375893455807907</string>
    <string name="assignment1">First time here?</string>
    <string name="assginment2">Sign Up</string>
    <string name="signupwith">or sign up with</string>
    <string name="phone">Phone</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="qrlo">with QRLO</string>

    <string name="title_activity_f_d_f_d_f">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_qr_bottom">MainActivity</string>

    <string name="ok">확인</string>


    <!-- activity_signup -->
    <string name="join">회원가입</string>
    <string name="get_number">인증번호 받기</string>
    <string name="national_num">국가번호</string>
    <string name="phone_num">휴대폰 번호</string>
    <string name="write_num">인증번호 입력</string>

    <string name="see_detail"> <u>자세히 보기</u> </string>
    <string name="agree_marketing">마케팅 정보 수신 동의 (선택)</string>
    <string name="event_news">다양한 이벤트 소식을 받을 수 있어요.</string>

    <!-- activity_my_qr -->
    <string name="list_my_qr">QR 코드 목록</string>

    <!-- activity_qr_info -->
    <string name="qr_info_title">서울과학기술대학교 미래관</string>
    <string name="list_address">서울시 노원구 공릉동</string>
    <string name="list_phone_number">010-1234-5678</string>


    <!-- activity_create_qr.xml -->
    <string name="create_qr_title">QR코드 만들기</string>
    <string name="create_qr_name">이름</string>
    <string name="create_qr_address">주소</string>
    <string name="create_qr_search">검색</string>
    <string name="create_qr_search_address">주소를 검색하세요</string>
    <string name="create_qr_detail_address">상세 주소</string>
    <string name="create_qr_is_temperature">온도 체크 가능 여부</string>
    <string name="create_qr_phone">연락처</string>
    <string name="create_qr_tell_exam">010&#8211;1234&#8211;5678("'"&#8211;"'"없이 입력)</string>
    <string name="create_qr_logo">로고</string>
    <string name="create_qr_create">만들기</string>

    <!-- 알림 메시지 -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">QRLO_chanel</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
</resources>
