<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup.SignupOtp"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/GenerateOTP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="90dp"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:src="@drawable/step1"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_num"/>

            <EditText
                android:id="@+id/otpText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Verify_Otp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/round_rec_fill"/>

</RelativeLayout>