<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.PhoneAuthActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/GenerateOTP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="30dp"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:src="@drawable/step3"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_num"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="25sp"/>
                <EditText
                    android:id="@+id/etCtyNum"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:hint="82"
                    android:textSize="25sp"
                    android:inputType="number" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etPhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="-없이 입력"
                android:textSize="25sp"
                android:inputType="phone" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/OpenOtp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@drawable/round_rec_fill"
        android:text="@string/get_number" />

    <ProgressBar
        android:id="@+id/waitingBar"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>