<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQrActivity"
    android:orientation="vertical"
    android:background="@color/bg_gray">



    <!-- 타이틀바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/title_bg">
        <TextView
            android:id="@+id/QR_info_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:textColor="@color/dark_gray"
            android:text="@string/create_qr_title"
            android:gravity="center"/>
    </LinearLayout>



    <!-- 그림자 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@drawable/title_shadow"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--  이름 -->
            <!--  이미지 + 이름 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_info"/>
                <TextView
                    android:id="@+id/create_qr_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="7dp"
                    android:text="@string/create_qr_name"
                    />
            </LinearLayout>

            <!--  edit 이름 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_rec_white"/>

                <EditText
                    android:id="@+id/create_qr_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:hint="00자 이내로 적어주세요"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    />
            </RelativeLayout>








            <!--  주소 -->

            <!--  이미지 + 주소 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/img_gps"/>
                <TextView
                    android:id="@+id/create_qr_address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/create_qr_address"
                    />
            </LinearLayout>


            <!--  edit 주소 + 검색버튼 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="260dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_rec_white"/>

                <EditText
                    android:id="@+id/create_qr_address_edit"
                    android:layout_width="260dp"
                    android:layout_height="40dp"

                    android:textSize="16sp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@null"
                    android:layout_centerVertical="true"

                    android:hint="@string/create_qr_search_address"
                    android:inputType="none"
                    />

                <Button
                    android:id="@+id/create_qr_address_btn"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_qr_search"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/round_rec_purple"
                    />
            </RelativeLayout>


            <!--  edit 상세주소 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_rec_white"/>
                <EditText
                    android:id="@+id/create_qr_detail_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@null"
                    android:layout_centerVertical="true"

                    android:hint="@string/create_qr_detail_address"
                    android:inputType="none"
                    />

            </RelativeLayout>







            <!-- 연락처 -->
            <!--  이미지 + 연락처 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/img_phone"/>
                <TextView
                    android:id="@+id/create_qr_phone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="7dp"
                    android:text="@string/create_qr_phone"
                    />
            </LinearLayout>

            <!--  edit 이름 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_rec_white"/>

                <EditText
                    android:id="@+id/create_qr_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_centerVertical="true"

                    android:background="@null"
                    android:hint="@string/create_qr_tell_exam"
                    android:inputType="phone"
                    />
            </RelativeLayout>









            <!-- 온도체크 가능 여부 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/temp_on"/>

                <TextView
                    android:id="@+id/create_qr_is_temperature_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="15dp"
                    android:text="@string/create_qr_is_temperature"
                    />

                <Switch
                    android:id="@+id/create_qr_is_temperature_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>







            <!-- 로고 등록 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/create_qr_logo_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/dark_gray"
                        android:layout_marginLeft="4dp"
                        android:text="@string/create_qr_logo"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/create_qr_logo_btn"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/img_logo_sample"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/create_qr_ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:background="@color/blue_purple"
        />

</LinearLayout>